--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <title>Weather App</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <style>
+      .fade-enter {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+
+      .fade-enter-active {
+        opacity: 1;
+        transform: translateY(0);
+        transition: all 500ms ease;
+      }
+    </style>
   </head>
   <body
-    class="bg-slate-900 text-white flex items-center justify-center h-screen"
+    class="bg-slate-900 text-white flex items-center justify-center h-screen transition-colors duration-500"
   >
-    <div class="bg-slate-800 p-6 rounded-2xl shadow-lg w-80 text-center">
+    <div
+      id="bgLayer"
+      class="fixed inset-0 -z-10 opacity-100 transition-opacity duration-700"
+    ></div>
+    <div
+      class="bg-slate-800/80 backdrop-blur-lg p-6 rounded-3xl shadow-2xl w-full max-w-md text-center"
+    >
       <h1 class="text-2xl font-bold mb-4">Weather App</h1>
 
       <input
@@ -34,6 +53,7 @@
       <p id="error" class="hidden mt-3 text-red-400"></p>
 
       <div id="weatherResult" class="mt-4"></div>
+      <div id="forecast" class="mt-6 grid grid-cols-5 gap-3 text-sm"></div>
     </div>
 
     <script src="script.js"></script>
