--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         class="w-full p-2 rounded-lg text-black mb-3"
       />
 
+      <div id="searchHistory" class="mt-4 flex flex-wrap gap-2"></div>
+
       <button
         id="detectBtn"
         class="bg-white/10 hover:bg-white/20 w-full py-2 rounded-lg font-semibold mt-2 transition"
